--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,67 +1,58 @@
 html{
     background-color: #141414;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     color: white;
     font-family: sans-serif;
 }
 body{
     background-color: #1f1f1f;
-    width: 400px;
-    height: 720px;
+    min-width: 300px;
     display: flex;
     flex-direction: column;
     text-align: center;
     align-items: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin: 30px;
+    padding: 20px;
     border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
 }
-img{
+img {
     border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-
-    margin-top: 50px;
+    width: 100px;
+    height: 100px;
 }
-.quotes{margin-top: 40px;}
 
 .head-paragraph2 {
     color: #c4f82a;
     font-weight: bolder;
 }
 
-nav a:hover {
-    color: #1f1f1f;
-    background-color: #c4f82a;
-}
-
 nav{
+    width: 100%;
     display: flex;
     flex-direction: column;
-    font-size: 20px;
-    margin-top: 10px;
-    line-height: 50px;
+    align-items: center;
+    gap: 0.5em;
+    font-size: 1.2em;
 }
-
 nav a{
+    width: 90%;
+    height: 40px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     background-color: #333333;
     text-decoration: none;
     color: white;
     font-weight: bold;
-    border-radius: 15px;
-    margin-bottom: 18px;
-    padding-left: 80px;
-    padding-right: 80px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
+    border-radius: 5px;
+}
+nav a:hover {
+    color: #1f1f1f;
+    background-color: #c4f82a;
 }
